fit new beautify.js

--- a/PdfMTranslation/PdfMTranslation.csproj
+++ b/PdfMTranslation/PdfMTranslation.csproj
@@ -125,8 +125,8 @@
     <None Include="Resources\icon_003190_256.jpg" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="codebeautify.js">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    <Content Include="beautify.js">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
