use python translators instead

--- a/PdfMTranslation/packages.config
+++ b/PdfMTranslation/packages.config
@@ -1,11 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Fizzler" version="1.0.0" targetFramework="net45" />
-  <package id="Fizzler.Systems.HtmlAgilityPack" version="1.0.0" targetFramework="net45" />
-  <package id="FreeImage-dotnet-core" version="4.0.3" targetFramework="net45" />
-  <package id="HtmlAgilityPack" version="1.4.6" targetFramework="net45" />
-  <package id="iTextSharp" version="5.5.11" targetFramework="net45" />
+  <package id="FreeImage-dotnet-core" version="4.3.6" targetFramework="net45" />
+  <package id="iTextSharp" version="5.5.13.1" targetFramework="net45" />
   <package id="JBig2Decoder.NET" version="1.0.3" targetFramework="net45" />
-  <package id="jint" version="2.10.4" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net45" />
+  <package id="pythonnet_py37_win" version="2.4.1" targetFramework="net45" />
 </packages>
